# fix_order_matching_system_cpp

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  Walkthrough.md  gemini3low_refact.md  gemini_refact.md
source/concurrent/: thread.cpp  thread.h
source/memory/: aligned_memory.cpp
source/order_matcher/: order.h  order_book.cpp  order_book.h  quickfix_converter.h
source/server/: server.h
source/utility/: single_instance.cpp  single_instance.h
test_unit/: test.cpp  test_market_orders.h
